--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 	<title>DevSquare-br</title>
+	<link rel="shortcut icon" type="image/png" href="ico.png"/>
+	<meta name="theme-color" content="#FFDD09">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:900,300" rel="stylesheet">
 </head>
 <body>
-	<div id="app" style="height:100vh; display:flex;"></div>
+	<div id="app" style="height:100vh; display:flex; width: 100%">
+	</div>
 	<script src="bundle.js"></script>
 </body>
 </html>
