update search page

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>DevSquare-br</title>
+	<meta charset="UTF-8">
 	<link rel="shortcut icon" type="image/png" href="ico.png"/>
 	<meta name="theme-color" content="#FFDD09">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:900,300" rel="stylesheet">
